# openCV4starter

./: CMakeLists.txt
CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp
